CheckIn:Fix the bugs in the project ¡°org.eclipse.birt.report.designer.ui.data¡± detected by the tool FindBugs.